|
Quick Lists
|
|
Bug ID:
|
6850957
|
|
Votes
|
0
|
|
Synopsis
|
Honor -XX:OnOutOfMemoryError when array size exceeds VM limit
|
|
Category
|
hotspot:runtime_system
|
|
Reported Against
|
|
|
Release Fixed
|
hs16(b08),
6u18(b01) (Bug ID:2181944)
, 7(b71) (Bug ID:2182184)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6850958
|
|
Submit Date
|
13-JUN-2009
|
|
Description
|
This is an internal bug report for the HotSpot side of:
https://bugs.openjdk.java.net/show_bug.cgi?id=100067
Posted Date : 2009-06-13 16:50:21.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See discussion:
http://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2009-June/thread.html
"JVMTI OOM handling when arrays / objects are too large"
The end result is not modifying JVMTI at all hence the move to Hotspot-runtime.
This simply causes OnOutOfMemoryError handling to be applied when OOME is thrown due to array size limits being exceeded.
webrev:
http://cr.openjdk.java.net/~martin/OnOutOfMemoryError/
Test program (does as part of Process test code in JDK - see CR 6850958):
http://cr.openjdk.java.net/~martin/OnOutOfMemoryError-test/
Posted Date : 2009-06-29 23:37:53.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/1413494da700
Posted Date : 2009-07-16 03:42:35.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |