6850957: Honor -XX:OnOutOfMemoryError when array size exceeds VM limit

Call report_java_out_of_memory("Requested array size exceeds VM limit")

Reviewed-by: tbell, dholmes, alanb, ysr